update CTA styles

--- a/web/themes/custom/mytheme/components/cta.twig
+++ b/web/themes/custom/mytheme/components/cta.twig
@@ -1,4 +1,4 @@
-<a class="bg-blue-500 cursor-pointer font-bold inline-block outline-hidden px-3 py-2 rounded-lg text-center text-white transition-all has-focus-visible:ring-3 hover:opacity-80 {{ class ?? '' }}"
+<a class="bg-blue-500 cursor-pointer font-bold inline-block outline-hidden px-3 py-2 ring-blue-300 rounded-lg text-center text-white transition-all focus-visible:ring-3 hover:opacity-80 {{ class ?? '' }}"
    href="{{ href }}"
    target="{{ target ?? '_self' }}"
 >
